Rearrange components. Fix alignments

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   flex-wrap: wrap;
 }
 
-.button {
+.cell {
   margin: auto;
   height: 240px;
   width: 240px;
@@ -44,17 +44,17 @@
   border-bottom-right-radius: 100%;
 }
 
-.button.active {
+.cell.active {
   border: 6px solid orange;
 }
 
 .controls {
   position: absolute;
   border-radius: 100%;
-  margin: 150px 0 0 150px;
+  margin: 125px 0 0 125px;
   background: white  ;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   border: 12px solid #333;
   display: flex;
   /*flex-wrap: wrap;*/
@@ -62,12 +62,12 @@
   align-items: center;
 }
 
-.strictButton {
+.button {
   border-radius: 50%;
   height: 30px;
   width: 30px;
   background-color: red;
-  border: 2px solid darkgrey;
+  border: 5px solid #333;
   outline: none;
 }
 
@@ -76,15 +76,33 @@
   height: 8px;
   width: 8px;
   background-color: black;
-  border: 3px solid black;
+  border: 2px solid black;
 }
 .strictStatus.on {
-  background-color: yellow;
-}
-.strictName {
-  margin: 0px;
+  background-color: red;
 }
 
-.strictDiv {
-  margin: 15px;
+.button.yellow {
+  background-color: yellow;
+}
+
+/*.controlButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}*/
+
+.group {
+  height: 80px;
+  width: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.label {
+  font-size: .9em;
+  margin: 10px;
 }
